Fix invisible borders in IE9

--- a/src/runtime/less/ts-toolbar.less
+++ b/src/runtime/less/ts-toolbar.less
@@ -529,6 +529,7 @@
 	}
 }
 
+
 // Breakpoints .................................................................
 
 .ts-mobile-only {
@@ -550,5 +551,19 @@
 		.ts-toolbar-last {
 			right: @ts-width-aside;
 		}
+	}
+}
+
+
+// Browsers ....................................................................
+
+.ts-engine-explorer9 {
+	.ts-toolbar-first:after {
+		border-top: 1px solid rgba(0,0,0,0.35);
+		background: none;
+	}
+	.ts-toolbar-last:after {
+		border-bottom: 1px solid rgba(0,0,0,0.35);
+		background: none;
 	}
 }
